# gridex

./: .gitignore  .solhint copy.json  .solhint.json  AUDIT_REPORT_KIRO_SONNET.md  Address.md  LICENSE  README.md  SECURITY_AUDIT.md  SECURITY_AUDIT_GLM.md  SECURITY_AUDIT_REPORT.md  SECURITY_CODEX.md  foundry.toml
gridsol/: Cargo.toml  README.md
gridsol/programs/gridsol/: Cargo.toml
gridsol/programs/gridsol/src/: constants.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
gridsol/programs/gridsol/tests/: integration_flow.rs  probe_accountview.rs
script/: .env.example  Counter.s.sol  Create2Deployer.sol  DEPLOYMENT.md  Deploy.s.sol  DeployDeterministic.s.sol  DeployDiamond.s.sol  GRIDEX_CLI.md  GridEx.basetestnet.s.sol  GridEx.bsc.s.sol  GridEx.s.sol  GridExTestnet.s.sol  Pair.s.sol  deploy.sh  deploy.testnet.sh  factory.sh  gridex-cli.sh  shell.sh
src/: Asset.sol  AssetSettle.sol  Deployer.sol  Factory.sol  FlashLoan.sol  GridEx.sol  GridEx7702BatchExecutor.sol  GridExRouter.sol  GridOrder.sol  Lens.sol  Pair.sol  Router.sol  SEA.sol  Vault.sol
test/: Diamond.fill.t.sol  Diamond.upgrade.t.sol  Factory.t.sol  Geometry.t.sol  GridEx.callback.t.sol  GridEx.cancel.t.sol  GridEx.cancelETH.t.sol  GridEx.edge.t.sol  GridEx.fee.t.sol  GridEx.feeOnTransfer.t.sol  GridEx.fill.t.sol  GridEx.fillCompound.t.sol  GridEx.fillETH.t.sol  GridEx.fillETHQuote.t.sol  GridEx.fillFuzz.t.sol  GridEx.fillGeometry.t.sol  GridEx.fuzz.t.sol  GridEx.invariant.t.sol  GridEx.mixedStrategy.t.sol  GridEx.pause.t.sol  GridEx.place.t.sol  GridEx.profit.t.sol  GridEx.revert.t.sol  (+10 more)
(+51 files in other folders)
