[package]
name = "gridsol"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "gridsol"

[features]
default = []
bpf-entrypoint = []

[dependencies]
pinocchio.workspace = true
borsh.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
solana-program = "2.1.13"
solana-sdk = "2.1.13"
solana-program-test = "2.1.13"
